# enterprise_aftersale_agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sample_knowledge/: 售后政策.md  物流与订单.md
scripts/: check_env.py  ingest_docs.py  init_db.py  run_dev.py  seed_demo_data.py
src/customer_service_app/: __init__.py  main.py
src/customer_service_app/agents/: customer_service_agent.py  state.py
src/customer_service_app/api/: dependencies.py  routes_chat.py  routes_conversations.py  routes_health.py  routes_ops.py
src/customer_service_app/callbacks/: trace_callback.py
src/customer_service_app/chains/: intent_classifier.py  rag_chain.py
src/customer_service_app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
src/customer_service_app/domain/: schemas.py
src/customer_service_app/infrastructure/cache/: __init__.py  redis_semantic_cache.py
src/customer_service_app/infrastructure/db/: models.py  repositories.py  session.py
src/customer_service_app/infrastructure/embeddings/: __init__.py  base.py  factory.py  langchain_factory.py  ollama.py  openai_compatible.py
src/customer_service_app/infrastructure/llm/: __init__.py  base.py  langchain_factory.py  openai_compatible.py
src/customer_service_app/memory/: chat_memory.py
src/customer_service_app/prompts/: customer_service.py
src/customer_service_app/services/: container.py  conversation_service.py  customer_service_agent.py  question_preprocessor.py  rag_service.py  tool_registry.py
src/customer_service_app/tools/: confirmation_gated_node.py  default_registry.py  langchain_tools.py  order_tools.py  search_tools.py
src/customer_service_app/web/: ops_console.html
src/customer_service_app/workflows/: customer_service_graph.py
tests/: test_conversation_memory.py  test_question_preprocessor.py  test_tool_registry.py
(+5 files in other folders)
