[project]
name = "enterprise-aftersale-agent"
version = "0.1.0"
description = "A FastAPI-based enterprise aftersale customer service agent with RAG and function calling."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
