[project]
name = "enterprise-aftersale-agent"
version = "0.1.0"
description = "A FastAPI-based enterprise aftersale customer service agent with RAG and function calling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "openai>=1.35.0",
    "httpx>=0.27.0",
    "redis>=5.0.4",
    "numpy>=1.26.0",
    "qdrant-client>=1.9.0",
    "SQLAlchemy>=2.0.30",
    "aiomysql>=0.2.0",
    "greenlet>=3.0.3",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-qdrant>=0.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
